--- a/cadastro-api/src/main/resources/application.properties
+++ b/cadastro-api/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # Console H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+api.security.token.secret=${JWT_SECRET:my-secret-key}
